// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render in SSR 1`] = `
"<Only>

Only visible for extra small devices (portrait phones)

Custom component

xs

Only visible for extra small devices (portrait phones)

<Match>

xs

nested smDown

(min-width:768px) and (max-width:992px),(max-width:576px)

smDown

Custom component used as Match's children

xs

xs

useBreakpoint()

isXs: true

isXsDown: true

isXsUp: true

isSm: false

isSmDown: true

isSmUp: false

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: true

isThinDown: true

isThinUp: true

isNormal: false

isNormalDown: true

isNormalUp: false

isBig: false

isBigDown: true

isBigUp: false

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

"
`;

exports[`Should render in SSR 2`] = `
"<Only>

Only visible for small devices (landscape phones)

Only visible for small AND extra large devices

Custom component

sm

Only visible for small devices (landscape phones)

sm xl

Only visible for small AND extra large devices

<Match>

sm

nested smDown

smDown

Custom component used as Match's children

sm

sm

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: true

isSmDown: true

isSmUp: true

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

<Only>

Only visible for small devices (landscape phones)

Only visible for small AND extra large devices

Custom component

sm

Only visible for small devices (landscape phones)

sm xl

Only visible for small AND extra large devices

<Match>

sm

nested smDown

smDown

Custom component used as Match's children

sm

sm

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: true

isSmDown: true

isSmUp: true

isMd: false

isMdDown: true

isMdUp: false

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

"
`;

exports[`Should render in SSR 3`] = `
"<Only>

Only visible for medium devices (tablets)

Custom component

md

Only visible for medium devices (tablets)

<Match>

md

(min-width:768px) and (max-width:992px),(max-width:576px)

mdUp

Custom component used as Match's children

md

md

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: true

isMdDown: true

isMdUp: true

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

<Only>

Only visible for medium devices (tablets)

Custom component

md

Only visible for medium devices (tablets)

<Match>

md

(min-width:768px) and (max-width:992px),(max-width:576px)

mdUp

Custom component used as Match's children

md

md

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: true

isMdDown: true

isMdUp: true

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

<Only>

Only visible for medium devices (tablets)

Custom component

md

Only visible for medium devices (tablets)

<Match>

md

(min-width:768px) and (max-width:992px),(max-width:576px)

mdUp

Custom component used as Match's children

md

md

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: true

isMdDown: true

isMdUp: true

isLg: false

isLgDown: true

isLgUp: false

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): true

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

"
`;

exports[`Should render in SSR 4`] = `
"<Only>

Only visible for large devices (desktops)

Custom component

lg

Only visible for large devices (desktops)

<Match>

lg

mdUp

Custom component used as Match's children

lg

lg

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: true

isLgDown: true

isLgUp: true

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

<Only>

Only visible for large devices (desktops)

Custom component

lg

Only visible for large devices (desktops)

<Match>

lg

mdUp

Custom component used as Match's children

lg

lg

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: true

isLgDown: true

isLgUp: true

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

<Only>

Only visible for large devices (desktops)

Custom component

lg

Only visible for large devices (desktops)

<Match>

lg

mdUp

Custom component used as Match's children

lg

lg

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: true

isLgDown: true

isLgUp: true

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

<Only>

Only visible for large devices (desktops)

Custom component

lg

Only visible for large devices (desktops)

<Match>

lg

mdUp

Custom component used as Match's children

lg

lg

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: true

isLgDown: true

isLgUp: true

isXl: false

isXlDown: true

isXlUp: false

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: true

isNormalDown: true

isNormalUp: true

isBig: false

isBigDown: true

isBigUp: false

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

"
`;

exports[`Should render in SSR 5`] = `
"<Only>

Only visible for extra large devices (large desktops)

Only visible for small AND extra large devices

Custom component

xl

Only visible for extra large devices (large desktops)

sm xl

Only visible for small AND extra large devices

<Match>

xl

mdUp

Custom component used as Match's children

xl

xl

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: false

isLgDown: false

isLgUp: true

isXl: true

isXlDown: true

isXlUp: true

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: false

isNormalDown: false

isNormalUp: true

isBig: true

isBigDown: true

isBigUp: true

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

<Only>

Only visible for extra large devices (large desktops)

Only visible for small AND extra large devices

Custom component

xl

Only visible for extra large devices (large desktops)

sm xl

Only visible for small AND extra large devices

<Match>

xl

mdUp

Custom component used as Match's children

xl

xl

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: false

isLgDown: false

isLgUp: true

isXl: true

isXlDown: true

isXlUp: true

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: false

isNormalDown: false

isNormalUp: true

isBig: true

isBigDown: true

isBigUp: true

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

<Only>

Only visible for extra large devices (large desktops)

Only visible for small AND extra large devices

Custom component

xl

Only visible for extra large devices (large desktops)

sm xl

Only visible for small AND extra large devices

<Match>

xl

mdUp

Custom component used as Match's children

xl

xl

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: false

isLgDown: false

isLgUp: true

isXl: true

isXlDown: true

isXlUp: true

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: false

isNormalDown: false

isNormalUp: true

isBig: true

isBigDown: true

isBigUp: true

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

<Only>

Only visible for extra large devices (large desktops)

Only visible for small AND extra large devices

Custom component

xl

Only visible for extra large devices (large desktops)

sm xl

Only visible for small AND extra large devices

<Match>

xl

mdUp

Custom component used as Match's children

xl

xl

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: false

isLgDown: false

isLgUp: true

isXl: true

isXlDown: true

isXlUp: true

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: false

isNormalDown: false

isNormalUp: true

isBig: true

isBigDown: true

isBigUp: true

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

<Only>

Only visible for extra large devices (large desktops)

Only visible for small AND extra large devices

Custom component

xl

Only visible for extra large devices (large desktops)

sm xl

Only visible for small AND extra large devices

<Match>

xl

mdUp

Custom component used as Match's children

xl

xl

useBreakpoint()

isXs: false

isXsDown: false

isXsUp: true

isSm: false

isSmDown: false

isSmUp: true

isMd: false

isMdDown: false

isMdUp: true

isLg: false

isLgDown: false

isLgUp: true

isXl: true

isXlDown: true

isXlUp: true

(min-width:768px) and (max-width:992px),(max-width:576px): false

wrong breakpoint: false

wrong media query: false

useBreakpoint() with heights

isThin: false

isThinDown: false

isThinUp: true

isNormal: false

isNormalDown: false

isNormalUp: true

isBig: true

isBigDown: true

isBigUp: true

{
 \\"@media (max-width:991px)\\": {
 \\"color\\": \\"red\\",
 \\":hover\\": {
 \\"color\\": \\"blue\\"
 }
 },
 \\"@media (min-width:992px)\\": {
 \\"color\\": \\"green\\"
 }
}

"
`;
